# kicad

./: CMakeLists.txt
include/: frame_type.h  kiway.h
kicad2vrml/: CMakeLists.txt  kicad2vrml.cpp
pcbnew/: CMakeLists.txt  pcb_edit_frame.h
pcbnew/dialogs/: dialog_export_idf.cpp  dialog_export_vrml.cpp
pcbnew/exporters/: export_idf.cpp  export_idf.h  export_vrml.cpp  export_vrml.h
